@@ -99,53 +99,50 @@ $myUser = $this->getContainer()->platform->getUser();
                 @lang($this->preference ? 'JYES' : 'JNO')
             </strong></span>
         </p>
-
     </div>
 @endif
 
-@if ($this->showExport || $this->showWipe)
+@if (($this->type == 'user') && ($this->showExport || $this->showWipe))
     <div class="akeeba-panel--orange">
-        @if($this->type == 'user')
-            <header class="akeeba-block-header">
-                <h1>
-                    @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_HEADER')
-                </h1>
-            </header>
+        <header class="akeeba-block-header">
+            <h1>
+                @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_HEADER')
+            </h1>
+        </header>
 
-            @if($this->showExport)
-                <p>
-                    @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_INFOBLOCK')
-                </p>
-            @endif
-
-            @if($this->showWipe)
-                <p class="akeeba-block--warning">
-                    @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_WARNING')
-                </p>
-            @endif
-
-            <div class="akeeba-container--50-50">
-                @if($this->showExport && (($this->type == 'user') || $myUser->authorise('export', 'com_datacompliance')))
-                    <div>
-                        <a href="@route('index.php?option=com_datacompliance&view=Options&task=export&format=raw&' . $this->getContainer()->platform->getToken() . '=1')"
-                           class="akeeba-btn--success--block">
-                            <span class="akion-android-download"></span>
-                            @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_EXPORT')
-                        </a>
-                    </div>
-                @endif
-
-                @if($this->showWipe && (($this->type == 'user') || $myUser->authorise('wipe', 'com_datacompliance')))
-                    <div>
-                        <a href="@route('index.php?option=com_datacompliance&view=Options&task=wipe&' . $this->getContainer()->platform->getToken() . '=1')"
-                           class="akeeba-btn--red--block">
-                            <span class="akion-nuclear"></span>
-                            @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_WIPE')
-                        </a>
-                    </div>
-                @endif
-            </div>
+        @if($this->showExport)
+            <p>
+                @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_INFOBLOCK')
+            </p>
         @endif
+
+        @if($this->showWipe)
+            <p class="akeeba-block--warning">
+                @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_WARNING')
+            </p>
+        @endif
+
+        <div class="akeeba-container--50-50">
+            @if($this->showExport && (($this->type == 'user') || $myUser->authorise('export', 'com_datacompliance')))
+                <div>
+                    <a href="@route('index.php?option=com_datacompliance&view=Options&task=export&format=raw&' . $this->getContainer()->platform->getToken() . '=1')"
+                       class="akeeba-btn--success--block">
+                        <span class="akion-android-download"></span>
+                        @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_EXPORT')
+                    </a>
+                </div>
+            @endif
+
+            @if($this->showWipe && (($this->type == 'user') || $myUser->authorise('wipe', 'com_datacompliance')))
+                <div>
+                    <a href="@route('index.php?option=com_datacompliance&view=Options&task=wipe&' . $this->getContainer()->platform->getToken() . '=1')"
+                       class="akeeba-btn--red--block">
+                        <span class="akion-nuclear"></span>
+                        @lang('COM_DATACOMPLIANCE_OPTIONS_DATARIGHTS_BTN_WIPE')
+                    </a>
+                </div>
+            @endif
+        </div>
     </div>
 @endif
 
